--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3"
+    "@types/react": "^17.0.3",
+    "@types/node": "^12.12.21",
+    "@types/react-dom": "^16.9.4",
+    "typescript": "4.0"
   }
 }
